--- a/wercker.yml
+++ b/wercker.yml
@@ -3,6 +3,16 @@ build:
     steps:
       - setup-go-workspace
       - script:
+          name: install latest git
+          code: |
+            sudo add-apt-repository -y ppa:git-core/ppa
+            sudo apt-get -y update
+            sudo apt-get -y install git
+      - script:
+          name: git version
+          code: |
+            git version        
+      - script:
           name: go get
           code: |            
             go get -t ./...
